force-app/main/default/objects/uSonarNews__TransferInformation__c/uSonarNews__TransferInformation__c.object-meta.xml
<CustomObject>
    <description>uSonarニュースから出力した異動情報を格納するオブジェクト</description>
    <label>異動情報</label>
    <nameField>
        <displayFormat>Tr-{0000000000}</displayFormat>
        <label>レコードID</label>
        <type>AutoNumber</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>