force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__Account__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>異動情報</relationshipLabel>
    <relationshipName>AccountRelation</relationshipName>
    <type>Lookup</type>
</CustomField>