force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__Career__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__Career__c</fullName>
    <label>経歴</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>