force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__CompanyName__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__CompanyName__c</fullName>
    <label>会社名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>