force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__Contact__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>取引先責任者(参考)</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>異動情報</relationshipLabel>
    <relationshipName>ContactRelation</relationshipName>
    <type>Lookup</type>
</CustomField>