force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__ContactName__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__ContactName__c</fullName>
    <label>担当者名</label>
    <length>255</length>
    <type>Text</type>
</CustomField>