force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__CurrentPosition__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__CurrentPosition__c</fullName>
    <label>現役職</label>
    <length>255</length>
    <type>Text</type>
</CustomField>