force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__Genre__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__Genre__c</fullName>
    <label>ジャンル</label>
    <length>255</length>
    <type>Text</type>
</CustomField>