force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__NewPosition__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__NewPosition__c</fullName>
    <label>新役職</label>
    <length>255</length>
    <type>Text</type>
</CustomField>