force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__NewsHeadlines__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__NewsHeadlines__c</fullName>
    <label>ニュース見出し</label>
    <length>255</length>
    <type>Text</type>
</CustomField>