force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__NewsText__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__NewsText__c</fullName>
    <label>ニュース本文(利用不可)</label>
    <type>TextArea</type>
</CustomField>