force-app/main/default/objects/uSonarNews__TransferInformation__c/fields/uSonarNews__TransferDate__c.field-meta.xml
<CustomField>
    <fullName>uSonarNews__TransferDate__c</fullName>
    <label>異動日</label>
    <type>Date</type>
</CustomField>